# lexmount-browser-lab

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  env.md  environment.py  pyproject.toml  req_llmapi.py  run_lexbrowser_grpo.sh  run_lexbrowser_training.sh  run_webarena_lite.py  secrets.env.example  verifiers_agent_app.py
docs/eval_reports/: README.md
docs/train_reports/: README.md
experiments/controlled-browser-parity/: README.md  generate_tasks.py  index.html
experiments/gpt55-lexbench/: README.md  config.controlled-egress.yaml  config.direct.yaml  config.yaml  runtime.from-openai.env
experiments/qwen3-8b-lexbench/: README.md  config.controlled-egress.yaml  config.yaml
experiments/shared-egress-proxy/: README.md  extract_cpolar_tcp_endpoint.py  forward_proxy.py  tcp_relay.py
results/: README.md
results/gpt55-lexbench/: preflight-20260712.md
scripts/: __init__.py  audit_paired_runs.py  compare_pair.py  generate_stratified_lexbench_taskset.py  probe_lexmount_sessions.py  run_benchmark.sh  run_gpt55_lexbench.sh  run_gpt55_pair.sh  run_lexbench.sh  run_lexmount_session_capacity.sh  run_online_mind2web.sh  run_qwen3_8b_lexbench_controlled_pair.sh  run_webarena_lite.sh  select_tasks.py  setup_webarena_lite_env.sh  setup_webarena_map_backend.sh  summarize_run.py  vllm_deploy.sh
tests/: test_analyze_capacity_matrix.py  test_analyze_followup.py  test_analyze_mechanism_repeats.py  test_audit_paired_runs.py  test_compare_pair.py  test_compare_repeated_pairs.py  test_controlled_browser_parity.py  test_local_cdp_network_recovery.py  test_monitor_lexmount_sessions.py  test_online_mind2web_policy_metadata.py  test_posttrain_checkpoint_comparison.py  test_posttrain_pair_audit.py  test_posttrain_probe_cli.py  test_posttrain_repeat_aggregate.py  test_probe_lexmount_sessions.py  test_probe_multi_profile_sessions.py  test_profile_command.py  test_profile_process.py  test_proxy_half_close.py  test_select_tasks.py  test_shared_egress_proxy.py  test_summarize_replays.py  test_summarize_run.py  test_tcp_relay.py
training/: README.md  environment.py  grpo_lexbrowser_webvoyager_qwen3_1_7b_2x5090.yaml  lexbrowser_webvoyager.yaml  run_lexbrowser_grpo.sh  verifiers_agent_app.py  vllm_worker_async.py
training/lexbrowser_webvoyager/: pyproject.toml
training/lexbrowser_webvoyager/src/lexbrowser_webvoyager_no_anti_bot/: environment.py
(+227 files in other folders)
