[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lexbrowserenv-experiments"
version = "0.1.0"
description = "Reproducible Lexmount Browser versus local Chrome experiments"
requires-python = ">=3.11"
dependencies = [
    "lexmount==0.5.12",
    "packaging>=23,<27",
    "psutil>=7.0",
    "python-dotenv>=1.0",
]

[project.scripts]
lexbench-eval = "lexbrowser_eval.lexbench.cli:main"
online-mind2web-eval = "lexbrowser_eval.online_mind2web.cli:main"
webarena-lite-eval = "lexbrowser_eval.webarena_lite.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/lexbrowser_eval/online_mind2web/cli.py" = ["E501"]
"tests/online_mind2web/test_cli.py" = ["E501"]
