[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lexbrowser-webvoyager-no-anti-bot"
version = "0.1.0"
description = "WebVoyager-no-anti-bot Verifiers environment backed by Lexmount Browser"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0",
    "lexmount==0.5.12",
    "openai>=1.0",
    "stagehand==3.21.0",
    "verifiers==0.1.9.post3",
    "websocket-client>=1.8",
]

[tool.setuptools.package-data]
lexbrowser_webvoyager_no_anti_bot = ["datasets/*.jsonl"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
